--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -21,3 +21,21 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.allPhotos {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  max-width: 60%;
+  margin: 10px auto;
+}
+
+.individualPhoto {
+  margin: 20px;
+  font-size: 12px;
+}
+
+/* .description {
+  height: 100px;
+  width: 100px;
+  text-align: center;
+} */
