--- a/src/components/GalleryItem/GalleryItem.css
+++ b/src/components/GalleryItem/GalleryItem.css
@@ -8,6 +8,17 @@
     margin-top: 10px;
 }
 
+.deleteButton {
+    background-color: darkred;
+    height: 30px;
+    width: 80px;
+    color: white;
+    font-weight: 600;
+    border-radius: 6px;
+    margin-top: 10px;
+    margin-left: 20px;
+}
+
 img {
     border-radius: 4px;
     border: solid #444 1px;
