--- a/src/components/GalleryItem/GalleryItem.css
+++ b/src/components/GalleryItem/GalleryItem.css
@@ -1,28 +1,21 @@
 .likeButton {
     background-color: blue;
-    height: 30px;
-    width: 80px;
+    width: 100px;
     color: white;
-    font-weight: 600;
+    font-weight: 400;
+    padding-top: 3px;
+    padding-bottom: 3px;    
     border-radius: 6px;
     margin-top: 10px;
 }
 
-.deleteButton {
-    background-color: darkred;
-    height: 30px;
-    width: 80px;
-    color: white;
-    font-weight: 600;
-    border-radius: 6px;
-    margin-top: 10px;
-    margin-left: 20px;
-}
 
-img {
+.individualImage {
     border-radius: 4px;
     border: solid #444 1px;
     padding: 4px;
+    height: 250px;
+    width: 250px;
 }
 
 .numLikes {
