--- a/src/components/GalleryList/GalleryList.css
+++ b/src/components/GalleryList/GalleryList.css
@@ -1,7 +1,7 @@
 .allPhotos {
     display: grid;
     grid-template-columns: auto auto auto;
-    max-width: 50%;
+    /* max-width: 50%; */
     margin: 10px auto;
   }
   
