--- a/src/components/InputForm/InputForm.css
+++ b/src/components/InputForm/InputForm.css
@@ -1,18 +1,20 @@
 .inputForm {
-    text-align: left;
-    max-width: 45%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    max-width: 80%;
     margin: 20px auto;
 }
 
 
 input {
     margin-left: 20px;
-    margin-right: 20px;
     height: 30px;
     width: 250px;
     padding: 5px;
     font-size: 14px;
-
+    margin-top: 20px;
 }
 
 #submitButton {
@@ -24,5 +26,6 @@ input {
     color: white;
     font-weight: 600;
     font-size: 14px;
-    margin-left: 20px
+    margin-left: 20px;
+    margin-top: 20px;
 }
